  'Collapse Fold' command (clicking fold triangles in the gutter still
  worked though)
- Removing text from the middle of a line with soft wrap on might not
  repaint the text area properly
- Added missing 'read error' and 'write error' I/O error strings
- Workaround for Graphics2D.setPaintMode() bug on Windows placed in
  background token painting code as well

+ API Additions

- Support for macros written in other languages (Mike Dillon)
  - Macros.registerHandler(Macros.Handler handler) method
  - Macros.Handler class has these methods:

    public abstract Macro createMacro(String macroName, String path);
    public abstract void runMacro(View view, Macro macro);
    protected Handler(String name)

  - 'name' is used to key "macro-handler.<name>.label" and
    "macro-handler.<name>.glob" properties.
  - One minor UI addition is that the language a macro is written in,
    along with the full path to the macro file is shown in the status
    bar when the mouse is over a macro's menu item or tool bar button.

- Support for pluggable fold handlers (Mike Dillon)
  - FoldHandler.registerFoldHandler(FoldHandler handler) method
  - FoldHandler class has these methods:

    public abstract int getFoldLevel(Buffer buffer, int line, Segment seg);
    protected FoldHandler(String name)

* Version 4.0pre5

+ New Features

- ObjectRexx syntax highlighting (George Hovey)

+ Enhancements

- If jEdit runs out of memory while loading a file, it now reports the
  error using the standard I/O error reporting method, instead of just
  dumping an exception in the activity log
- If indent folding is enabled, lines consisting of white space only no
  longer inherit the fold level of the previous line
- QuickNotepad plugin compiled by default
- FAQ updates (John Gellene)
- The "Open in New View" command has been re-added to the file system
  browser right-click menu
- Pressing ENTER in the file system browser no longer closes the